// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main 1`] = `
{
  "account": {
    "number": "XXXXXX5913",
    "number_formatted": "x5913",
    "type": "upi",
  },
  "transaction": {
    "amount": 11,
    "currency": "INR",
    "date": "Tue Feb 20 2024 00:00:00 GMT+0000 (India Standard Time)",
    "merchant": "goog-payment@okaxis",
    "type": "credit",
  },
}
`;

exports[`main 2`] = `
{
  "account": {
    "number": "**5913",
    "number_formatted": "x5913",
    "type": "upi",
  },
  "transaction": {
    "amount": 890,
    "currency": "INR",
    "date": "Sun Feb 11 2024 00:00:00 GMT+0000 (India Standard Time)",
    "merchant": "Shell India Markets Pvt Ltd",
    "type": "debit",
  },
}
`;

exports[`main 3`] = `
{
  "account": {
    "number": "*5913",
    "number_formatted": "x5913",
    "type": "upi",
  },
  "transaction": {
    "amount": 23,
    "currency": "INR",
    "date": "Sun Feb 25 2024 00:00:00 GMT+0000 (India Standard Time)",
    "merchant": "VARUN MIDDLENAME LASTNAME",
    "type": "debit",
  },
}
`;
